src/test/ui/typeck/typeck_type_placeholder_mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/typeck_type_placeholder_mismatch.rs:13:21
   |
LL |     let x: Foo<_> = Bar::<usize>(PhantomData);
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^ expected struct `Foo`, found struct `Bar`
   |
   = note: expected type `Foo<_>`
              found type `Bar<usize>`

error[E0308]: mismatched types
  --> $DIR/typeck_type_placeholder_mismatch.rs:22:21
   |
LL |     let x: Foo<_> = Bar::<usize>(PhantomData);
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^ expected struct `Foo`, found struct `Bar`
   |
   = note: expected type `Foo<_>`
              found type `Bar<usize>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
